# MangaForge

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  docker-compose.yml  env.example
apps/web/: .env.example  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
apps/web/src/: App.vue  styles.css
docker/minio/: init-buckets.sh
docs/: MangaForge_MVP_开发计划与任务拆解.md
docs/agent/: MangaForge_HermesAgent_接入设计文档.md
docs/agents/: domain.md
docs/api/: MangaForge_API_接口文档.md
docs/architecture/: MangaForge_技术架构设计文档.md
docs/database/: MangaForge_数据库详细设计文档.md
docs/deployment/: MangaForge_部署运维文档.md
docs/frontend/: MangaForge_前端页面与组件设计文档.md
docs/prd/: MangaForge_MVP_产品_Backlog.md  MangaForge_产品原型设计说明.md  MangaForge_详细需求规格说明书.md
docs/prototype/: MangaForge_高保真交互原型.html  MangaForge_高保真交互原型_v0.2.html  MangaForge_高保真交互原型_v0.3.html
docs/test/: MangaForge_测试用例与验收标准.md
services/api/: alembic.ini  pyproject.toml  requirements.txt
services/api/alembic/: env.py
services/api/alembic/versions/: e77f17db820e_add_user_and_project_tables.py
services/api/app/: config.py  main.py
services/api/app/api/: deps.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: auth.py  projects.py
services/api/app/core/: exceptions.py  response.py  security.py
services/api/app/db/: base.py  session.py
services/api/app/infrastructure/: celery.py  minio.py  redis.py
services/api/app/models/: project.py  user.py
services/api/app/schemas/: auth.py  project.py
(+60 files in other folders)
